samples/_failures_safe/1761421985_20ac49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8035cc7d.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
